--- a/2019-11-01.md
+++ b/2019-11-01.md
@@ -1,1 +1,30 @@
-# Burndown Chart
+# 2019-11-01
+## Burndown Chart
+![2019-11-01 burndown chart]({{site.url}}/assets/burndown-2019-11-01.png)
+
+## Sprint Completed Stories
+![2019-11-01 completed stories]({{site.url}}/assets/completed-2019-11-01.png)
+
+## Backlog
+![2019-11-01 remaining stories]({{site.url}}/assets/remaining-2019-11-01.png)
+
+## Narrative - Sprint 1 Summary
+In this abbreviated sprint, we were able to start making progress on Thursday (10/31). During our sprint planning meeting, we decided the scope of our sprint should be around DevOps and creating our initial deployment. 
+
+We completed four buckets of tasks (some which are able to be parallelized):
+1. Setting up our local development environments
+2. Creating our Heroku site
+3. Creating our project site
+4. Testing Git
+
+Creating our local development environment presented a few challenges. Our team members had to install Postgres and configure the DATABASE_URL key. Some members are still completing the task. We are using three different operating systems (MacOS, Windows, Linux), which presents some challenges. 
+
+Graham deployed our site to Heroku, and added each individual as a collaborator. Initially, our build was failing because we hadn't installed a postgres plugin. After installing it, we were able to deploy our site.
+
+We each were able to add branches successfully to our git repo, which we can see below.
+![2019-11-01 git log]({{site.url}}/assets/git-log-2019-11-01.png)
+
+## Narrative - Sprint 2 Preview
+For Sprint 2, we need to ensure each member can deploy locally, and that we are familiarizing ourselves with the starter code. This will allow us to identify issues and create succinct user stories that help us identify what elements are lacking.
+
+At a high level, we need to build the homepage and templates for each event page. Once we are more familiar with the site, we will be able to add specific user stories and begin our build.
