adding home link

--- a/2019-11-01.md
+++ b/2019-11-01.md
@@ -28,3 +28,5 @@ We each were able to add branches successfully to our git repo, which we can see
 For Sprint 2, we need to ensure each member can deploy locally, and that we are familiarizing ourselves with the starter code. This will allow us to identify issues and create succinct user stories that help us identify what elements are lacking.
 
 At a high level, we need to build the homepage and templates for each event page. Once we are more familiar with the site, we will be able to add specific user stories and begin our build.
+
+[Home](index.md)
